src/styles/buttons.css
/* buttons, 4 variants: "primary", "secondary", "outline", "ghost" */
.button {
  @apply flex items-center justify-center px-6 py-2.5 text-center;
  @apply text-primary-foreground flex w-fit min-w-[8rem] rounded-md;
  @apply disabled:pointer-events-none;
  transition-property:
    color, background-color, border-color, text-decoration-color, fill, stroke, --tw-gradient-from,
    --tw-gradient-via, --tw-gradient-to;
  transition-timing-function: var(--default-transition-timing-function);
  transition-duration: var(--default-transition-duration);
}

.button--primary {
  @apply text-primary-foreground bg-primary hover:bg-primary/90;
}

/* gradient version of primary button */
.button--secondary {
  @apply text-secondary-foreground bg-secondary hover:bg-secondary/90;
}

.button--outline {
  @apply border-border text-foreground hover:bg-border border;
}

.button--ghost {
  @apply text-foreground hover:bg-foreground/10;
}

